--- a/src/modules/analytics/content/proxy.html
+++ b/src/modules/analytics/content/proxy.html
@@ -5,24 +5,23 @@
 <body>
 <div id="debug"></div>
 <script type="text/javascript">
-    (function() {
+    function ga_initialize() {
         var elem = document.getElementById("debug");
         var debug = function(text) {
             elem.textContent = elem.textContent + "\n" + text;
         }
-
         window.console = {
             log: (msg) => debug("proxy log: " + msg),
             debug: (msg) => debug("proxy debug: " + msg),
             error: (msg) => debug("proxy error: " + msg),
             info: (msg) => debug("proxy info: " + msg)
         }
-    }());
 
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','http://www.google-analytics.com/analytics_debug.js','ga');
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','http://www.google-analytics.com/analytics_debug.js','ga');
+    }
 </script>
 </body>
 </html>
