--- a/src/modules/analytics/content/proxy.html
+++ b/src/modules/analytics/content/proxy.html
@@ -5,18 +5,27 @@
 <body>
 <div id="debug"></div>
 <script type="text/javascript">
-    function ga_initialize() {
-        var elem = document.getElementById("debug");
-        var debug = function(text) {
-            elem.textContent = elem.textContent + "\n" + text;
-        }
-        window.console = {
-            log: (msg) => debug("proxy log: " + msg),
-            debug: (msg) => debug("proxy debug: " + msg),
-            error: (msg) => debug("proxy error: " + msg),
-            info: (msg) => debug("proxy info: " + msg)
-        }
+    /**
+     * Replace window.console with our debugging version.
+     *
+     * Note: This must be done before window.onload, otherwise it will throw an
+     *       exception.
+     */
+    var elem = document.getElementById("debug");
+    var debug = function(text) {
+        elem.textContent = elem.textContent + "\n" + text;
+    }
+    window.console = {
+        log: (msg) => debug("proxy log: " + msg),
+        debug: (msg) => debug("proxy debug: " + msg),
+        error: (msg) => debug("proxy error: " + msg),
+        info: (msg) => debug("proxy info: " + msg)
+    }
 
+    /**
+     * Load the google analytics script.
+     */
+    function ga_initialize() {
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
