startpage: drop version number from IDE section
git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@14314 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/content/startpage/offline/edit_offline.html
+++ b/src/chrome/komodo/content/startpage/offline/edit_offline.html
@@ -24,7 +24,7 @@
     </td>
     <td id="msg">
       <div id="msg_title" class="as_font_swiss721cnbold">Get Komodo IDE</div>
-      <div id="msg_body" class="as_font_swiss721ltcnlight">Get your development work done faster with Komodo IDE 6.</div>
+      <div id="msg_body" class="as_font_swiss721ltcnlight">Get your development work done faster with Komodo IDE.</div>
     </td>
   </tr></table>
 </body>
