Console: Include the platform css
(integrated from master branch change 9.2.1-404-g75bf596 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/console/content/jsconsole/index.html
+++ b/src/modules/console/content/jsconsole/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <title>JavaScript console - for debugging JavaScript and remote debugging mobile web apps</title>
+<link rel="stylesheet" href="chrome://komodo/skin/" />
 <link rel="stylesheet" href="console.css" />
 </head>
 <body class="editor-field">
