UI: Added the new Komodo icon
Please use the bug tracker if you wish to provide feedback.

--- a/src/chrome/komodo/content/about/about.html
+++ b/src/chrome/komodo/content/about/about.html
@@ -45,6 +45,8 @@
                          -moz-calc(100% - 10px) -moz-calc(100% - 10px);
     background-attachment: scroll,
                            fixed;
+    background-size: auto auto,
+                      256px 256px;
   }
   
   #content {
