--- a/src/chrome/komodo/content/colorpicker/colorpicker.html
+++ b/src/chrome/komodo/content/colorpicker/colorpicker.html
@@ -103,8 +103,8 @@
 		</table>
 	
 	<div class="dialog-buttons">
-		<input type="button" id="ok_button" accesskey="O" onclick="_window.retval = 1; _window.close();" value="OK" style="min-width: 70px">
-		<input type="button" id="cancel_button" accesskey="C" onclick="_window.retval = 0; _window.close();" value="Cancel" style="min-width: 70px">
+		<input type="button" id="ok_button" accesskey="O" onclick="window.retval = 1; _window.close();" value="OK" style="min-width: 70px">
+		<input type="button" id="cancel_button" accesskey="C" onclick="window.retval = 0; _window.close();" value="Cancel" style="min-width: 70px">
 	</div>
 
 </body>
