--- a/src/chrome/komodo/content/colorpicker/colorpicker.html
+++ b/src/chrome/komodo/content/colorpicker/colorpicker.html
@@ -60,7 +60,6 @@
 				var alpha = window.cp1.getAlphaValue();
 				_window.arguments[0].color = color;
 				_window.arguments[0].alpha = alpha;
-				_window.arguments[0].retval = _window.retval;
 				if (window.retval && _window.arguments[0].callback) {
 					_window.arguments[0].callback(_window.arguments[0].color);
 				}
@@ -103,8 +102,8 @@
 		</table>
 	
 	<div class="dialog-buttons">
-		<input type="button" id="ok_button" accesskey="O" onclick="window.retval = 1; _window.close();" value="OK" style="min-width: 70px">
-		<input type="button" id="cancel_button" accesskey="C" onclick="window.retval = 0; _window.close();" value="Cancel" style="min-width: 70px">
+		<input type="button" id="ok_button" accesskey="O" onclick="_window.arguments[0].retval = 1; _window.close();" value="OK" style="min-width: 70px">
+		<input type="button" id="cancel_button" accesskey="C" onclick="_window.close();" value="Cancel" style="min-width: 70px">
 	</div>
 
 </body>
